# ExploreIT

./: .gitignore  CMakeLists.txt  Cal  Cal1920  Cal1920.pro  Graph.h  Makefile  README.md  connections.cpp  connections.h  graph.h  main.cpp  map.osm  mapdisplay.cpp  mapdisplay.h  mapparser.cpp  mapparser.h  node.cpp  node.h
GraphViewer/cpp/: graphviewer.h
data/: difficulties.txt  edges.txt  nodes_a.txt
data/GridGraphs/100x100/: connectivity.txt  create_grid.py  default.txt  difficulties.txt  edges.txt  nodes.txt  pois.txt  time
data/GridGraphs/16x16/: connectivity.txt  default.txt  difficulties.txt  floydWarshallOutput.txt  pois.txt  time
data/GridGraphs/16x16 (cópia)/: difficulties.txt  floydWarshallOutput.txt
data/GridGraphs/4x4/: connectivity.txt  difficulties.txt  floydWarshallOutput.txt  time
data/GridGraphs/8x8/: connectivity.txt  default.txt  difficulties.txt  floydWarshallOutput.txt  pois.txt  time
data/PortugalMaps/Aveiro/: connectivity.txt  default.txt  difficulties.txt  time  timeDFS
data/PortugalMaps/Braga/: connectivity.txt  default.txt  difficulties.txt  time  timeDFS
data/PortugalMaps/Coimbra/: connectivity.txt  default.txt  difficulties.txt  time  timeDFS
data/PortugalMaps/Ermesinde/: connectivity.txt  default.txt  difficulties.txt  time  timeDFS
data/PortugalMaps/Espinho/: connectivity.txt  default.txt  difficulties.txt  edges_espinho.txt  espinho_full_nodes_latlng.txt  espinho_strong_edges.txt  espinho_strong_nodes_latlng.txt  espinho_strong_nodes_xy.txt  nodes_x_y_espinho.txt  time  timeDFS
data/PortugalMaps/Fafe/: connectivity.txt  default.txt  difficulties.txt  time  timeDFS
data/PortugalMaps/Gondomar/: connectivity.txt  default.txt  difficulties.txt  time  timeDFS
data/PortugalMaps/Lisboa/: connectivity.txt  default.txt  difficulties.txt  timeDFS
data/PortugalMaps/Maia/: connectivity.txt  default.txt  difficulties.txt  med.py  time  timeDFS
data/PortugalMaps/Penafiel/: connectivity.txt  default.txt  difficulties.txt  edges_penafiel.txt  nodes_x_y_penafiel.txt  penafiel_full_nodes_latlng.txt  penafiel_strong_edges.txt  penafiel_strong_nodes_latlng.txt  penafiel_strong_nodes_xy.txt  time  timeDFS
data/PortugalMaps/Porto/: connectivity.txt  difficulties.txt  timeDFS
data/PortugalMaps/Porto_full/: connectivity.txt  default.txt  difficulties.txt  time  timeDFS
data/PortugalMaps/Viseu/: connectivity.txt  default.txt  difficulties.txt  med.py  time  timeDFS
data/TagExamples/Aveiro/: t01_tags_aveiro.txt  t02_tags_aveiro.txt  t03_tags_aveiro.txt  t04_tags_aveiro.txt  t05_tags_aveiro.txt  t07_tags_aveiro.txt  t08_tags_aveiro.txt  t09_tags_aveiro.txt  t10_tags_aveiro.txt  t11_tags_aveiro.txt
data/TagExamples/Braga/: t01_tags_braga.txt  t02_tags_braga.txt  (+8 more)
docs/: Relatorio1.aux  Relatorio1.tex  Relatorio1.toc
src/: HelloWorld.cpp  HelloWorld.h  graph.cpp  main.cpp  utils.h
src/Graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Preprocessor.cpp  Preprocessor.h  Vertex.cpp  Vertex.h  graph.cpp  graph.h  teste.cpp  teste.h
src/Menu/: Menu.cpp  Menu.h
src/Utils/: GraphLoader.cpp  GraphLoader.h  MutablePriorityQueue.cpp  MutablePriorityQueue.h  Position.cpp  Position.h  utils.h
(+102 files in other folders)
